<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationX="2dp">

    <Button
        android:id="@+id/btnCustomWordsClear"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="374dp"
        android:layout_height="53dp"
        android:text="@string/clear_word_bank"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCustomWordsAdd" />

    <Button
        android:id="@+id/btnCustomWordsAdd"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="374dp"
        android:layout_height="56dp"
        android:text="@string/add_word_pair"
        android:textSize="20sp"
        android:translationX="5dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customWordsScrollView"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/customWordsHeader"
        android:layout_width="243dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/your_custom_words"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/btnCustomWordsBack"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideInset"
        android:text="@string/back"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <ScrollView
        android:id="@+id/customWordsScrollView"
        android:layout_width="379dp"
        android:layout_height="336dp"
        android:contentDescription="@string/customwordsscrollview"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217">

        <TableLayout
            android:id="@+id/customWordsTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>